force-app/main/default/objects/Employment__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <label>ABN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>