force-app/main/default/objects/Employment__c/fields/Address_1_Previous__c.field-meta.xml
<CustomField>
    <fullName>Address_1_Previous__c</fullName>
    <label>Address 1 Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>