force-app/main/default/objects/Employment__c/fields/Address_2_Previous__c.field-meta.xml
<CustomField>
    <fullName>Address_2_Previous__c</fullName>
    <label>Address 2 Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>