force-app/main/default/objects/Employment__c/fields/Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Amount__c</fullName>
    <label>Allowance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>