force-app/main/default/objects/Employment__c/fields/Allowance_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Frequency__c</fullName>
    <label>Allowance Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>