force-app/main/default/objects/Employment__c/fields/Annual_Base_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Income__c</fullName>
    <formula>IF(ISPICKVAL(Income_Frequency__c ,&quot;Weekly&quot;), AnnualIncome__c *52,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Fortnightly&quot;), AnnualIncome__c *26,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Monthly&quot;), AnnualIncome__c *12,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Annually&quot;), AnnualIncome__c *1,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Base Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>