force-app/main/default/objects/Employment__c/fields/Annual_Commission_and_Bonus_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission_and_Bonus_Income__c</fullName>
    <formula>IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Weekly&quot;), Commission_or_Bonus_amount__c *52,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Fortnightly&quot;), Commission_or_Bonus_amount__c *26,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Monthly&quot;), Commission_or_Bonus_amount__c *12,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Annually&quot;), Commission_or_Bonus_amount__c *1,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Commission and Bonus Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>