force-app/main/default/objects/Employment__c/fields/Annual_Commission_Bonus_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission_Bonus_Income__c</fullName>
    <label>Annual Commission Bonus Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>