force-app/main/default/objects/Employment__c/fields/Annual_Income_2_Previous__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income_2_Previous__c</fullName>
    <label>Annual Income 2 Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>