force-app/main/default/objects/Employment__c/fields/Annual_Overtime_Inome__c.field-meta.xml
<CustomField>
    <fullName>Annual_Overtime_Inome__c</fullName>
    <formula>IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Weekly&quot;), Work_Overtime_amount__c *52,
IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Fortnightly&quot;), Work_Overtime_amount__c *26,
IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Monthly&quot;), Work_Overtime_amount__c *12,
IF(ISPICKVAL(Work_Overtime_Frequency__c,&quot;Annually&quot;), Work_Overtime_amount__c *1,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Overtime Inome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>