force-app/main/default/objects/Employment__c/fields/Annual_salary_before_tax__c.field-meta.xml
<CustomField>
    <fullName>Annual_salary_before_tax__c</fullName>
    <label>Annual salary before tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>