force-app/main/default/objects/Employment__c/fields/Annual_Verified_Income_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Verified_Income_Calculation__c</fullName>
    <formula>IF(ISPICKVAL( Verified_Income_Frequency__c ,&quot;Weekly&quot;), Verified_Income_Amount__c *52/12,
IF(ISPICKVAL(Verified_Income_Frequency__c ,&quot;Fortnightly&quot;), Verified_Income_Amount__c *26/12,
IF(ISPICKVAL(Verified_Income_Frequency__c ,&quot;Monthly&quot;), Verified_Income_Amount__c ,
IF(ISPICKVAL(Verified_Income_Frequency__c ,&quot;Annually&quot;), Verified_Income_Amount__c /12,
Verified_Income_Amount__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Verified Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>