force-app/main/default/objects/Employment__c/fields/Are_you_registered_for_GST__c.field-meta.xml
<CustomField>
    <fullName>Are_you_registered_for_GST__c</fullName>
    <label>Are you registered for GST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>