force-app/main/default/objects/Employment__c/fields/Commission_or_Bonus_amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_or_Bonus_amount__c</fullName>
    <label>Commission or Bonus amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>