force-app/main/default/objects/Employment__c/fields/Country_2__c.field-meta.xml
<CustomField>
    <fullName>Country_2__c</fullName>
    <label>Country 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>