force-app/main/default/objects/Employment__c/fields/Date_ABN_registered__c.field-meta.xml
<CustomField>
    <fullName>Date_ABN_registered__c</fullName>
    <label>Date ABN registered</label>
    <type>Date</type>
</CustomField>