force-app/main/default/objects/Employment__c/fields/Does_your_spouse_earn_an_income__c.field-meta.xml
<CustomField>
    <fullName>Does_your_spouse_earn_an_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does your spouse earn an income</label>
    <type>Checkbox</type>
</CustomField>