force-app/main/default/objects/Employment__c/fields/Employer_Name_1_Previous__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_1_Previous__c</fullName>
    <label>Employer Name 1 Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>