force-app/main/default/objects/Employment__c/fields/EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddress__c</fullName>
    <label>EmployerAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>