force-app/main/default/objects/Employment__c/fields/EmployerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployerPhoneNumber__c</fullName>
    <label>EmployerPhoneNumber</label>
    <type>Phone</type>
</CustomField>