force-app/main/default/objects/Employment__c/fields/Employment_base_co_car_p_a__c.field-meta.xml
<CustomField>
    <fullName>Employment_base_co_car_p_a__c</fullName>
    <formula>IF(ISPICKVAL(Income_Frequency__c ,&quot;Weekly&quot;), AnnualIncome__c *52,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Fortnightly&quot;), AnnualIncome__c *26,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Monthly&quot;), AnnualIncome__c *12,
IF(ISPICKVAL(Income_Frequency__c ,&quot;Annually&quot;), AnnualIncome__c *1,
AnnualIncome__c)))) + IF(ISPICKVAL( Provide_a_Company_Car__c ,&quot;Yes&quot;), 5000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment base + co car p.a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>