force-app/main/default/objects/Employment__c/fields/Employment_o_t_allow_Comm_p_a__c.field-meta.xml
<CustomField>
    <fullName>Employment_o_t_allow_Comm_p_a__c</fullName>
    <formula>IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Weekly&quot;), Work_Overtime_amount__c *52,
IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Fortnightly&quot;), Work_Overtime_amount__c *26,
IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Monthly&quot;), Work_Overtime_amount__c *12,
IF(ISPICKVAL(Work_Overtime_Frequency__c ,&quot;Annually&quot;), Work_Overtime_amount__c *1,
Work_Overtime_amount__c)))) +
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Weekly&quot;), Commission_or_Bonus_amount__c *52,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Fortnightly&quot;), Commission_or_Bonus_amount__c *26,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Monthly&quot;), Commission_or_Bonus_amount__c *12,
IF(ISPICKVAL(Commission_or_Bonus_Frequency__c ,&quot;Annually&quot;), Commission_or_Bonus_amount__c *1,
Commission_or_Bonus_amount__c)))) +
IF(ISPICKVAL(Allowance_Frequency__c ,&quot;Weekly&quot;), Allowance_Amount__c *52,
IF(ISPICKVAL(Allowance_Frequency__c ,&quot;Fortnightly&quot;), Allowance_Amount__c *26,
IF(ISPICKVAL(Allowance_Frequency__c ,&quot;Monthly&quot;), Allowance_Amount__c *12,
IF(ISPICKVAL(Allowance_Frequency__c ,&quot;Annually&quot;), Allowance_Amount__c *1,
Allowance_Amount__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment o/t allow &amp; Comm p.a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>