force-app/main/default/objects/Employment__c/fields/Employment_Status_1_Previous__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_1_Previous__c</fullName>
    <label>Employment Status 1 Previous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time permanent</fullName>
            </value>
            <value>
                <fullName>Part time permanent</fullName>
            </value>
            <value>
                <fullName>Self Employed / Contractor</fullName>
            </value>
            <value>
                <fullName>Business Income</fullName>
            </value>
            <value>
                <fullName>Casual / Temporary</fullName>
            </value>
            <value>
                <fullName>New Start Allowance</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Dividends or Annuity</fullName>
            </value>
            <value>
                <fullName>Family Tax Benefits</fullName>
            </value>
            <value>
                <fullName>Disability Pension</fullName>
            </value>
            <value>
                <fullName>Carer’s Pension</fullName>
            </value>
            <value>
                <fullName>Workcover Workers / Compensation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>