force-app/main/default/objects/Employment__c/fields/Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount__c</fullName>
    <label>Income Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>