force-app/main/default/objects/Employment__c/fields/Is_Find_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Is_Find_Address_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Find Address 1</label>
    <type>Checkbox</type>
</CustomField>