force-app/main/default/objects/Employment__c/fields/Last_year_net_profit__c.field-meta.xml
<CustomField>
    <fullName>Last_year_net_profit__c</fullName>
    <label>Last year net profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>