force-app/main/default/objects/Employment__c/fields/LengthOfEmployment__c.field-meta.xml
<CustomField>
    <fullName>LengthOfEmployment__c</fullName>
    <label>LengthOfEmployment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>