force-app/main/default/objects/Employment__c/fields/Minimum_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Minimum_hours_per_week__c</fullName>
    <label>Minimum hours per week</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>