force-app/main/default/objects/Employment__c/fields/monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>monthly_Income__c</fullName>
    <formula>IF(ISPICKVAL(Income_Frequency__c,&quot;Weekly&quot;), AnnualIncome__c *52/12,
IF(ISPICKVAL(Income_Frequency__c,&quot;Fortnightly&quot;), AnnualIncome__c *26/12,
IF(ISPICKVAL(Income_Frequency__c,&quot;Monthly&quot;), AnnualIncome__c,
IF(ISPICKVAL(Income_Frequency__c,&quot;Annually&quot;), AnnualIncome__c/12,
AnnualIncome__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>