force-app/main/default/objects/Employment__c/fields/Months_1_Previous__c.field-meta.xml
<CustomField>
    <fullName>Months_1_Previous__c</fullName>
    <label>Months 1 Previous</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>